fix api to REST pattern
